--- a/angular.json
+++ b/angular.json
@@ -121,7 +121,9 @@
               "src/styles.scss",
               "node_modules/perfect-scrollbar/css/perfect-scrollbar.css",
               "src/assets/scss/material-dashboard.scss",
-              "src/assets/css/demo.css"
+              "src/assets/css/demo.css",
+              "node_modules/ngx-toastr/toastr.css",
+              "node_modules/ngx-spinner/animations/timer.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
