--- a/angular.json
+++ b/angular.json
@@ -98,7 +98,7 @@
               "browserTarget": "material-dashboard-angular:build:development"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "production"
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
