--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "popper.js": "1.16.1",
     "primeng": "14.0.0",
     "rxjs": "~7.5.0",
+    "socket.io-client": "^4.7.3",
     "toastr": "^2.1.4",
     "tslib": "^2.3.0",
     "web-animations-js": "2.3.2",
