--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "googleapis": "99.0.0",
     "hammerjs": "2.0.8",
     "jquery": "3.6.0",
+    "material-icons": "^1.13.12",
     "moment": "2.29.1",
     "ngx-otp-input": "^0.11.4",
     "ngx-spinner": "^v14.0.0",
