--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -35,6 +35,6 @@ jobs:
 
             # Deploy the build (adjust for your setup)
             rm -rf  /home/u612971954/domains/myvyky.com/public_html/portal/*
-            cp -r dist/* /home/u612971954/domains/myvyky.com/public_html/portal/
+            cp -r dist/admin/* /home/u612971954/domains/myvyky.com/public_html/portal/
 
             echo "Frontend deployment complete!"
